--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,19 +12,19 @@ import PageHeader from '../components/PageHeader.astro';
 			<div class="row align-items-center">
 				<div class="col-7">
 					<h1 style="font-size:2rem">Share & Spark!</h1>
-					<h3 style="font-weight:400">The Mono is a everything platform for posting a piece of text, video, picture and more..</h3>
+					<h3 style="font-weight:400">The Mono is an everything platform for posting a piece of text, video, picture and more..</h3>
 				</div>
 				<div class="col">
 					<div class="row align-items-center">
 						<i class="col-4">Post something: </i>
 						<div class="col btn-list">
-							<button class="btn btn-primary btn-icon" aria-label="Text">
+							<button class="btn btn-primary btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Text">
 								<i class="ti ti-pencil"></i>
 							</button>
-							<button class="btn btn-success btn-icon" aria-label="Video / Picture">
+							<button class="btn btn-success btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Media">
 								<i class="ti ti-camera"></i>
 							</button>
-							<button class="btn btn-danger btn-icon" aria-label="Link">
+							<button class="btn btn-danger btn-icon" data-bs-toggle="tooltip" data-bs-placement="top" title="Link">
 								<i class="ti ti-link"></i>
 							</button>
 						</div>
