--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -14,7 +14,7 @@ const {
 	notificationsActive = "",
 	messagesActive = "",
 	profileActive = "",
-	settingsActive: string,
+	settingsActive = "",
 } = Astro.props;
 ---
 
@@ -23,12 +23,12 @@ const {
 	  <button class="navbar-toggler" type="button">
 		<span class="navbar-toggler-icon"></span>
 	  </button>
-	  <h1 class="navbar-brand navbar-brand-autodark" style="font-size:3rem;transform:rotateZ(90deg);position:absolute;left:-5.1rem;bottom:90px;color:var(--tblr-body-bg)">
+	  <h1 class="navbar-brand navbar-brand-autodark">
 		<a href="/">
 		  the mono
 		</a>
 	  </h1>
-	  <div class="collapse navbar-collapse" id="sidebar-menu" style="font-size: 1.5rem;padding-left: 10px;">
+	  <div class="navbar-collapse" id="sidebar-menu" style="font-size: 1.5rem;padding-left: 10px;">
 		<ul class="navbar-nav pt-lg-3">
 		  <li class="nav-item mb-3">
 			<div class="input-icon" style="margin-left: 5px;">
@@ -66,7 +66,7 @@ const {
 		  <li class="nav-item">
 			<a class={"nav-link " + messagesActive} href="/messages">
 			  <span class="nav-link-title">
-				<i class="ti ti-message-circle"></i><span>messages</span>
+				<i class="ti ti-messages"></i><span>messages</span>
 			  </span>
 			</a>
 		  </li>
@@ -78,7 +78,7 @@ const {
 			</a>
 		  </li>
 		  <li class="nav-item">
-			<a class={"nav-link " + profileActive} href="/settings">
+			<a class={"nav-link " + settingsActive} href="/settings">
 			  <span class="nav-link-title">
 				<i class="ti ti-settings"></i><span>settings</span>
 			  </span>
@@ -89,15 +89,38 @@ const {
 	</div>
   </aside>
 
+
+  <ul class="mobile-nav">
+	<li data-bs-toggle="tooltip" data-bs-placement="top" title="Home"><a href="/" class={homeActive}>
+		<i class="ti ti-home"></i>
+	</a></li>
+	<li data-bs-toggle="tooltip" data-bs-placement="top" title="Explore"><a href="/explore" class={exploreActive}>
+		<i class="ti ti-compass"></i>
+	</a></li>
+	<li data-bs-toggle="tooltip" data-bs-placement="top" title="Notifications"><a href="/notifications" class={notificationsActive}>
+		<i class="ti ti-bell"></i>
+	</a></li>
+	<li data-bs-toggle="tooltip" data-bs-placement="top" title="Messages"><a href="/messages" class={messagesActive}>
+		<i class="ti ti-messages"></i>	
+	</a></li>
+	<li data-bs-toggle="tooltip" data-bs-placement="top" title="Profile"><a href="/profile" class={profileActive}>
+		<i class="ti ti-user-circle"></i>	
+	</a></li>
+	<li data-bs-toggle="tooltip" data-bs-placement="top" title="Settings"><a href="/settings" class={settingsActive}>
+		<i class="ti ti-settings"></i>	
+	</a></li>
+  </ul>
+
   <style>
 
 	aside {
 		position: fixed !important;
 		box-shadow: 10px 0 40px 4px rgb(0 0 0 / 35%) !important;
+		width: 65px !important;
+		z-index: 99999999 !important;
 	}
 
 	aside:not(:hover) {
-		width: 65px !important;
 		overflow: hidden;
 		transition: 0.2s all !important;
 	}
@@ -120,7 +143,110 @@ const {
 		background: rgb(255 255 255 / 15%);
 		border: 1px solid rgb(255 255 255 / 5%);
 		width: 100%;
-		border-top-right-radius: 0;
-		border-bottom-right-radius: 0;
+	}
+
+	@media (max-width: 577px) {
+		aside, aside:hover {
+			width: 100vw !important;
+		}
+
+		aside .container-fluid > button {
+			opacity: 0 !important;
+			pointer-events: none !important;
+		}
+
+		.navbar-collapse {
+			height: 0 !important;
+		}
+
+
+		aside li:not(:first-child) {
+			display: none !important;
+		}
+
+		aside li:first-child {
+			transform: translate(-7px,-50px) !important;
+		}
+
+		h1 {
+			transform: rotateZ(0deg) !important;
+			bottom: 0 !important;
+			left: unset !important;
+			padding-right: 5px !important;
+			font-size: 3rem !important;
+		}
+
+		.mobile-nav {
+			display: flex !important;
+		}
+	}
+
+	@media (min-width: 576px) {
+		h1 {
+			font-size:3rem !important;
+			transform:rotateZ(90deg);
+			position:absolute;
+			left:-5.1rem;
+			bottom:90px;
+			color:var(--tblr-body-bg);
+		}
+
+		input#inputSearch {
+			border-top-right-radius: 0 !important;
+			border-bottom-right-radius: 0 !important;
+		}
+	}
+
+
+	.mobile-nav {
+		position: fixed;
+		height: 50px;
+		bottom: 0;
+		width: 100%;
+		display: none;
+		list-style-type: none;
+		flex-direction: row;
+		align-items: center;
+		justify-content: space-around;
+		z-index: 99999999;
+		background-color: transparent;
+		border-top: 1px solid #ddd;
+		margin: 0;
+		backdrop-filter: blur(1rem);
+-webkit-backdrop-filter: blur(1rem);
+	}
+
+	.mobile-nav li, a {
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+		text-decoration: none !important;
+	}
+
+	.mobile-nav li a {
+		opacity: 0.6;
+		color: #000000;
+		transition: 0.2s all;
+	}
+
+	.mobile-nav li a:hover {
+		opacity: 0.7;
+		transition: 0.2s all;
+	}
+
+	.mobile-nav li a.active {
+		opacity: 0.8;
+		transition: 0.2s all;
+	}
+
+	.mobile-nav li a i {
+		font-size: 30px;
+	}
+
+	.nav-item, .nav-item a {
+		text-align: start;
+		align-items: start;
+		justify-content: start;
 	}
   </style>
