--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -14,7 +14,7 @@ import PageHeader from '../components/PageHeader.astro';
             <br/><br/>
             <h2 style="font-size:1.5rem;text-align: center;font-weight:400;padding-left:18rem;padding-right:18rem;">Looks like you entered wrong URL or this page was deleted. Try going home or search something from the sidebar?</h2>
             <br/>
-            <h2 style="text-align: center;"><a href="/" class="btn btn-primary">Go home!</a></h2>
+            <h2 style="text-align: center;"><a href="/" class="btn btn-dark">Go home!</a></h2>
         </div>
 	</div>	  
 </Layout>
