--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,7 @@ const { title } = Astro.props;
 		margin: 0;
 		padding: 0;
 		font-family: var(--font-text);
+		overflow: auto !important;
 	}
 
 	h1,h2,h3,h4,h5,h6 {
